fix: style for modalHints on mobile

--- a/src/styles/iScroll.scss
+++ b/src/styles/iScroll.scss
@@ -34,8 +34,12 @@
       border-radius: 50%;
       animation: spin 2s linear infinite;
       left: calc(50% - 15px);
-      top: calc(50% - 90px);
+      top: calc(50% - 140px);
       z-index: 2;
+
+      @media screen and (min-width: 768px) {
+        top: calc(50% - 90px);
+      }
     }
 
     @keyframes spin {
@@ -60,11 +64,18 @@
       //transform: translate(-50%, -50%);
       white-space: pre;
 
-      padding: 0 150px;
+      padding: 0 15px;
       box-sizing: border-box;
       width: 100%;
       height: 100%;
       backdrop-filter: blur(50px);
+
+      @media screen and (min-width: 600px) {
+        padding: 0 80px;
+      }
+      @media screen and (min-width: 992px) {
+        padding: 0 150px;
+      }
     }
 
     &[data-status='error'] {
